fix compile-time error in jaxrs because changes in Usage API
API classes are RolledUpUnit, UsageRecord and RawUsageRecord